# MAAS

./: README.md
maas-html/: .gitignore  README.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  pyproject.toml  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
maas-html/.github/workflows/: ci.yml
maas-html/docs/: known-differences.md  media-guidelines.md
maas-html/effects/: index.html
maas-html/episodes/episodio-0-prueba-efectos/: index.html
maas-html/episodes/episodio-0-prueba-renderizar/: index.html
maas-html/episodes/episodio-17-el-correo-infinito/: index.html
maas-html/media-library/: emotion-policy.json  media-catalog.json
maas-html/public/: effects-catalog.json
maas-html/reports/: asset-audit.json  asset-manifest.json  media-gaps.json  media-gaps.md
maas-html/schemas/: asset-manifest.schema.json  episode-manifest.schema.json  episode-presentation.schema.json  media-catalog.schema.json
maas-html/src/: assetUrls.ts  main.tsx  player.tsx  styles.css  timeline.ts  types.ts
maas-html/src/audio/: AudioEngine.ts
maas-html/src/renderer/: HandmadeLayerFilter.ts  MaasStage.ts  effectEngine.ts  effectMath.ts
maas-html/src/ui/: App.tsx  EffectLab.tsx  effectScenes.ts
maas-html/tests/e2e/: effects.spec.ts  player.spec.ts
maas-html/tests/python/: test_creative_skills.py  test_effect_catalog.py  test_html_first_contract.py  test_media_pipeline.py  test_pages_workflow.py
maas-html/tests/typescript/: assetUrls.test.ts  effectEngine.test.ts  effectScenes.test.ts  timeline.test.ts
maas-html/tools/maas_builder/: build_preview.py  (+1 more)
(+231 files in other folders)
