[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "maas-html-builder"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
maas = "maas_builder.cli:main"

[tool.setuptools]
package-dir = {"" = "tools"}

[tool.setuptools.packages.find]
where = ["tools"]
